platform/idp/production/cloudflare-httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-cloudflare
  namespace: keycloak
spec:
  parentRefs:
  - name: keycloak-cloudflare
  hostnames:
  - auth.seigra.net
  rules:
  - backendRefs:
    - name: keycloak
      port: 80
    matches:
    - path:
        value: /realms/home
    - path:
        value: /resources
